bscah-homebase/reports.css
#report-table {
    margin: 10px;
    border: solid 1px;
    height: 100%;
    overflow: scroll;
}

#report-table #search-fields-container {
    font-family: "Helvetica Neue";
    height: 100%;
    display: inline-block;
    float: left;
    margin-left: 20px;
    margin-top: 10px;
    padding-right: 20px;
}

#report-table #search-fields-container .volunteer-name {
    width: 150px;
    height: 30px;
    padding: 4px 6px;
    margin-bottom: 5px;
    font-size: 14px;
    line-height: 20px;
    color: #555555;
    vertical-align: middle;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    background-color: #ffffff;
    border: 1px solid #cccccc;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
    -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
    -o-transition: border linear 0.2s, box-shadow linear 0.2s;
    transition: border linear 0.2s, box-shadow linear 0.2s;
}

#report-table #search-fields-container .search-description {
    font-size: 15px;
    font-weight: normal;
    margin-top: 10px;
    margin-bottom: 10px;
}

#report-table #search-fields-container #add-more {
    float: right;
    margin-right: 25px;
}

#report-table #search-fields-container #report-type {
    padding: 4px 6px;
    margin-bottom: 10px;
    font-size: 14px;
    color: #555555;
    vertical-align: middle;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
}

#report-table #search-fields-container #today {
    margin-top: 10px;
}

#report-table #search-fields-container #from, #to {
    width: 80px;
}

#report-table #search-fields-container #fromto {
    display: none;
}

#report-table #outputs {

    display: inline-block;
    height: 100%;

}

#report-table #outputs #report {
    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
    font-size: 12px;
    background: #fff;
    margin: 10px;
    width: 480px;
    border-collapse: collapse;
    border-spacing: 2px;
}

#report-table #outputs #report th {
    font-size: 17px;
    font-weight: normal;
    color: #039;
    padding: 10px 8px;
    border-bottom: 2px solid #6678b1;
}

#report-table #outputs #report td {
    border-bottom: 1px solid #ccc;
    color: #669;
    padding: 6px 8px;
}

#report-table #outputs #report tbody tr:hover td {
    color: #009;
}

.btn {
    padding: 6px 6px;
    margin-top: 0px;
    margin-bottom: 0;
    font-size: 12px;
    font-weight: normal;
    line-height: 1.428571429;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    background-image: none;
    border: 1px solid transparent;
    border-radius: 4px;
    background-color: #fff;
    border-color: #ccc;
}

#report-submit :hover {
    color: #333;
}

#loading {
  width: 50%;
  height: 50%;
  top: 0px;
  left: 0px;
  position: fixed;
  display: block;
  opacity: 0.7;
  background-color: #fff;
  z-index: 99;
  text-align: center;
}

#loading-image {
  position: absolute;
  top: 100px;
  left: 0px;
  z-index: 100;
}

